--- a/src/components/AssessmentCard/AssessmentCard.css
+++ b/src/components/AssessmentCard/AssessmentCard.css
@@ -18,10 +18,10 @@
   flex-direction: column;
   gap: 20px;
   overflow: hidden;
-  padding: 14px;
+  padding: 14px !important;
   position: relative;
   width: 370px;
-  height: 200px;
+  height: 209px;
 }
 
 .ac-frame-8 {
@@ -296,7 +296,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 25px;
+  width: 30px;
   height: 25px;
   justify-content: center;
   overflow: hidden;
