--- a/src/components/AssessmentDetails/assessment.css
+++ b/src/components/AssessmentDetails/assessment.css
@@ -10,3 +10,16 @@
   flex-shrink: 0;
   padding-bottom: 50px;
 }
+
+.text-wrapper-001 {
+  color: #1c4980;
+  font-family: "Inter", Helvetica;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: normal;
+  position: relative;
+  white-space: nowrap;
+  width: fit-content;
+  padding-left: 30px;
+}
