--- a/src/components/Navigation/nav.css
+++ b/src/components/Navigation/nav.css
@@ -51,3 +51,34 @@
   gap: 0.375rem;
   border-radius: 0.5rem;
 }
+
+@media screen and (max-width: 420px) {
+  .side_navigation {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+  }
+
+  .side_navigation .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .side_navigation .user_admin {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    margin-left: 75px;
+  }
+
+  .side_navigation .user_admin div:nth-child(2) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
